Fix alignment of items in side-by-side class

--- a/ld-projects/project-style.css
+++ b/ld-projects/project-style.css
@@ -45,7 +45,7 @@ body {
 .side-by-side {
             display: flex;
             gap: 2em;
-            align-items: flex-center;
+            align-items: center;
 }
 
 .left {
